buffer image handleded
